# Calibrated-Photometric-Stereo

./: CMakeLists.txt  DirectoryConfig.h.in  README.md  commands.sh
data/config/: buddha.xml  cat.xml  chrome.xml  configurationCPS.xsd  gray.xml  horse.xml  owl.xml  rock.xml
module/: CpsConfiguration.hpp  DataStructure.hpp  Image.hpp  PhotometricStereoSolver.hpp  main.cpp  utilEigen.hpp  utilFile.hpp  utilString.hpp
